Correct Samo Gray variable overlap

--- a/app/assets/stylesheets/white_theme/variables.scss
+++ b/app/assets/stylesheets/white_theme/variables.scss
@@ -40,7 +40,7 @@ $silver: #C7C8C7;
 $samo-gray: #A6A6A6;
 $lightest-gray: #C7C6C3;
 $light-gray: #EEEEEE;
-$samo-gray: #F2F2F2;
+$samo-background-gray: #F2F2F2;
 $white: #FFFFFF;
 $red: #D3220C;
 $green: #66A410;
